--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,26 +1,23 @@
-name: Build Mod
+name: Java CI
 
 on: [push, pull_request]
 
 jobs:
   buildJar:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up PATH
-      run: |
-        echo "${ANDROID_HOME}/build-tools/34.0.0" >> $GITHUB_PATH
-    - name: Set up JDK 17
-      uses: actions/setup-java@v1
-      with:
-        java-version: 17
-    - name: Build mod jar
-      run: |
-        chmod +x ./gradlew
-        ./gradlew deploy
-    - name: Upload built jar file
-      uses: actions/upload-artifact@v4
-      with:
-        name: ${{ github.event.repository.name }}
-        path: build/libs/${{ github.event.repository.name }}.jar
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: 17
+          distribution: temurin
+      - name: Build mod artifact
+        run: |
+          chmod +x gradlew
+          ./gradlew clean dex
+      - name: Upload built mod artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ModTemplate (zipped)
+          path: build/libs/ModTemplate.jar
